fix(events): spacing

--- a/web/skins/classic/css/base/skin.css
+++ b/web/skins/classic/css/base/skin.css
@@ -160,6 +160,7 @@ button.btn {
 #toolbar .btn-normal {
   margin-right: 3px;
 }
+#rightButtons .btn-normal,
 #leftButtons .btn-normal {
   margin-right: 0px;
 }
